@@ -18,7 +18,7 @@ public class ConvertMatrix2ListTest {
                 {3, 4}
         };
         List<Integer> result = list.toList(data);
-        List<Integer> expected = Arrays.asList(1, 2, 3, 4);
+        List<Integer> expected = List.of(1, 2, 3, 4);
         assertThat(result, is(expected));
     }
 }
